helm/monitoring/bliblimart-frontend/04-deployment.yaml
# Source: bliblimart-frontend/templates/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "bliblimart-frontend-deployment"
  namespace: bliblimart-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bliblimart-frontend
  template:
    metadata:
      name: bliblimart-frontend
      labels:
        app: bliblimart-frontend
    spec:
      containers:
      - name: bliblimart-frontend
        image: "kmdr7/bliblimart-frontend:1.0.0"
        ports:
        - name: app
          containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "256m"
          limits:
            memory: "128Mi"
            cpu: "256m"
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
